worked on fixing spacing issues

--- a/styles/customers.css
+++ b/styles/customers.css
@@ -13,7 +13,7 @@
 .customers__description {
     width: 36rem;
     text-align: center;
-    margin: 0 auto;
+    margin: 1rem auto;
 }
 
 .customers__stats {
