--- a/styles/faq.css
+++ b/styles/faq.css
@@ -71,7 +71,7 @@
     color: #fff;
     display: flex;
     align-items: center;
-    padding: 32px 28px 22px 28px;
+    padding: 32px 28px 32px 28px;
     font-size: 1.1rem;
     font-weight: 500;
     cursor: pointer;
