--- a/styles/features.css
+++ b/styles/features.css
@@ -169,6 +169,7 @@
     .features__item {
         gap: 1.2rem;
         padding: 0.8rem;
+        align-items: center;
     }
 
     .features__item-title {
