--- a/styles/newsletter.css
+++ b/styles/newsletter.css
@@ -215,7 +215,7 @@
 
     /* SVGs: shrink, move to corners, prevent overlap */
     .newsletter-cta__star--yellow {
-        left: -10px;
+        left: 30px;
         bottom: 6px;
         width: 38px;
         height: 38px;
@@ -223,7 +223,7 @@
     }
 
     .newsletter-cta__sparkle--green {
-        left: 5px;
+        left: 40px;
         top: 38px;
         width: 18px;
         height: 18px;
@@ -231,7 +231,7 @@
     }
 
     .newsletter-cta__star--blue {
-        right: 4px;
+        right: 40px;
         top: 28px;
         width: 22px;
         height: 24px;
@@ -239,7 +239,7 @@
     }
 
     .newsletter-cta__flower {
-        right: -10px;
+        right: 44px;
         bottom: 6px;
         width: 30px;
         height: 30px;
